--- a/src/Components/Home/Venues/venue.module.css
+++ b/src/Components/Home/Venues/venue.module.css
@@ -51,3 +51,11 @@
     transition: filter 0.3s ;
     filter: blur(3.5px);
 }
+
+.batch{
+    height: 90px;
+    width: 120px;
+    background-image: linear-gradient(-270deg,lightgreen,lightseagreen);
+    clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 35% 50%, 0% 0%);
+    transform: rotate(-90deg);
+}
