--- a/src/Components/Home/UpcommitngEvent/upcommingevent.css
+++ b/src/Components/Home/UpcommitngEvent/upcommingevent.css
@@ -1,14 +1,11 @@
-@import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css";
-
-.App {
-  width: 50%;
+.app {
+  width: 70%;
   margin: 10rem auto;
   height: 570px;
 }
 
 .slide img {
-  width: 20rem;
+  width: 400px;
   margin: 0 auto;
 }
 
