--- a/src/Components/Authentication/form.module.css
+++ b/src/Components/Authentication/form.module.css
@@ -85,8 +85,8 @@
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
+	width: 100%;
+	max-width: 900px;
 	min-height: 480px;
 }
 
