--- a/src/Components/Home/OurServices/OurServices.module.css
+++ b/src/Components/Home/OurServices/OurServices.module.css
@@ -8,8 +8,8 @@ input[type=radio] {
 
 .card {
 	position: absolute;
-	width: 60%;
-	height: 100%;
+	width: 45%;
+	height: 90%;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -39,118 +39,118 @@ input[type=radio] {
 img {
 	width: 100%;
 	height: 100%;
-	border-radius: 10px;
+	/* border-radius: 10px; */
 	object-fit: cover;
 }
 
-#item-1:checked~.cards #song-3,
-#item-2:checked~.cards #song-1,
-#item-3:checked~.cards #song-2 {
+.Iitem-1:checked~.cards #song-3,
+.Iitem-2:checked~.cards #song-1,
+.Iitem-3:checked~.cards #song-2 {
 	transform: translatex(-40%) scale(0.8);
 	opacity: 0.4;
 	z-index: 0;
 }
 
-#item-1:checked~.cards #song-2,
-#item-2:checked~.cards #song-3,
-#item-3:checked~.cards #song-1 {
+.Iitem-1:checked~.cards #song-2,
+.Iitem-2:checked~.cards #song-3,
+.Iitem-3:checked~.cards #song-1 {
 	transform: translatex(40%) scale(0.8);
 	opacity: 0.4;
 	z-index: 0;
 }
 
-#item-1:checked~.cards #song-1,
-#item-2:checked~.cards #song-2,
-#item-3:checked~.cards #song-3 {
+.Iitem-1:checked~.cards #song-1,
+.Iitem-2:checked~.cards #song-2,
+.Iitem-3:checked~.cards #song-3 {
 	transform: translatex(0) scale(1);
 	opacity: 1;
 	z-index: 1;
 }
 
-#item-1:checked~.cards #song-1 img,
-#item-2:checked~.cards #song-2 img,
-#item-3:checked~.cards #song-3 img {
+.Iitem-1:checked~.cards #song-1 img,
+.Iitem-2:checked~.cards #song-2 img,
+.Iitem-3:checked~.cards #song-3 img {
 	box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
 }
 
-.player {
+/* .player {
 	background-color: #fff;
 	border-radius: 8px;
 	min-width: 320px;
 	padding: 16px 10px;
-}
+} */
 
-.upper-part {
+/* .upper-part {
 	position: relative;
 	display: flex;
 	align-items: center;
 	margin-bottom: 12px;
 	height: 36px;
 	overflow: hidden;
-}
+} */
 
-.play-icon {
+/* .play-icon {
 	margin-right: 10px;
-}
+} */
 
-.song-info {
+/* .song-info {
 	width: calc(100% - 32px);
 	display: block;
-}
+} */
 
-.song-info .title {
+/* .song-info .title {
 	color: #403d40;
 	font-size: 14px;
 	line-height: 24px;
-}
+} */
 
-.sub-line {
+/* .sub-line {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-}
+} */
 
-.subtitle,
+/* .subtitle,
 .time {
 	font-size: 12px;
 	line-height: 16px;
 	color: #c6c5c6;
-}
+} */
 
-.time {
+/* .time {
 	font-size: 12px;
 	line-height: 16px;
 	color: #a5a5a5;
 	font-weight: 500;
 	margin-left: auto;
-}
+} */
 
-.progress-bar {
+/* .progress-bar {
 	height: 3px;
 	width: 100%;
 	background-color: #e9efff;
 	border-radius: 2px;
 	overflow: hidden;
-}
+} */
 
-.progress {
+/* .progress {
 	display: block;
 	position: relative;
 	width: 60%;
 	height: 100%;
 	background-color: #2992dc;
 	border-radius: 6px;
-}
+} */
 
-.info-area {
+/* .info-area {
 	width: 100%;
 	position: absolute;
 	top: 0;
 	left: 30px;
 	transition: transform 0.4s ease-in;
-}
+} */
 
-#item-2:checked~.player #test {
+/* #item-2:checked~.player #test {
 	transform: translateY(0);
 }
 
@@ -160,4 +160,4 @@ img {
 
 #item-3:checked~.player #test {
 	transform: translateY(-80px);
-}
+} */
