--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -21,7 +21,7 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background-color: rgba(8, 8, 8, 0.349) !important;
+  background-color: rgba(8, 8, 8, 0.349) ;
   /*Centerslidetextvertically*/
   display: -webkit-box;
   display: -ms-flexbox;
