--- a/src/Components/Home/UpcommitngEvent/upcommingevent.css
+++ b/src/Components/Home/UpcommitngEvent/upcommingevent.css
@@ -1,7 +1,7 @@
 .app {
   width: 80%;
   margin: 10px auto;
-  height: 570px;
+  height: 600px;
 }
 
 .slide img {
@@ -28,6 +28,8 @@
 
 .arrow {
   background-color: #fff;
+  border-radius: 50%;
+  padding: 6px;
   position: absolute;
   cursor: pointer;
   z-index: 10;
@@ -35,10 +37,11 @@
 
 .arrow svg {
   transition: color 300ms;
+  color: #ff3e00;
 }
 
 .arrow svg:hover {
-  color: #68edff;
+  color: #ffbe30;
 }
 
 .next {
@@ -69,3 +72,6 @@
 }
 
 
+.sdw{
+  box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.1);
+}
