--- a/src/Components/Home/Blog/BlogDetails/FeaturedEvent/FeaturedEvent.css
+++ b/src/Components/Home/Blog/BlogDetails/FeaturedEvent/FeaturedEvent.css
@@ -4,4 +4,25 @@
     font-size: 48px;
     font-weight: 400;
     color: #333333;
+   
 }
+.sitebanner{
+    background-image: url(https://i.ibb.co/HKnXjsk/spacial-event-bg.jpg);
+     background-size:cover;
+     background-image: cover;
+     background-repeat: no-repeat;
+    height: 370px;
+     object-fit: cover;
+     background-image: center;
+}
+
+@media screen and (max-width: 576px) {
+    .sitebanner{
+        background-image: url(https://i.ibb.co/HKnXjsk/spacial-event-bg.jpg);
+         background-size:cover;
+         background-image: cover;
+         background-repeat: no-repeat;
+           height: 370px;
+         object-fit: cover;
+         background-image: center;
+    }}
