--- a/src/Components/Home/Staffs/staffs.module.css
+++ b/src/Components/Home/Staffs/staffs.module.css
@@ -11,11 +11,13 @@
 
 .bg{
     background-image: url('../../../staff_bg_image/staffs_bg_1.jpg');
-    background-position: center;
+    background-position: 100% -300px;
     background-repeat: no-repeat;
-    background-size: cover;   
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .bgLayer{
-    background-image: radial-gradient(rgba(255, 255, 255, 0.568),rgba(255, 255, 255, 0.483));
+    background-image: radial-gradient(rgba(255, 255, 255, 0.302),rgba(255, 255, 255, 0.805),rgb(255, 255, 255));
+    /* background-image: linear-gradient(transparent,transparent); */
 }
