--- a/src/Components/Home/OurServices/OurServices.css
+++ b/src/Components/Home/OurServices/OurServices.css
@@ -17,3 +17,30 @@
   color: #ffbe30;
 }
 
+.myArrow {
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 6px;
+  position: absolute;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.myArrow svg {
+  transition: color 300ms;
+  color: #ff3e00;
+}
+
+.myArrow svg:hover {
+  color: #ffbe30;
+}
+
+.right {
+  right: 0%;
+  top: 50%;
+}
+
+.left {
+  left: 0%;
+  top: 50%;
+}
