--- a/src/Components/Home/OurServices/OurServices.css
+++ b/src/Components/Home/OurServices/OurServices.css
@@ -9,16 +9,17 @@
 .hvr:hover .cld{
   background-image: linear-gradient(to bottom right, #ffbe30, #ff3e00);
   opacity: 0.75;
-  
+  transition: background-image 1.5s;
   /* color: white; */
 }
 
 .hvr:hover .cld2{
   color: #ffbe30;
+  transition: color 1.5s ;
 }
 
 .myArrow {
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 50%;
   padding: 6px;
   position: absolute;
@@ -28,7 +29,7 @@
 
 .myArrow svg {
   transition: color 300ms;
-  color: #ff3e00;
+  color: #c0c0c0;
 }
 
 .myArrow svg:hover {
@@ -36,11 +37,20 @@
 }
 
 .right {
-  right: 0%;
+  right: -5%;
   top: 50%;
 }
 
 .left {
-  left: 0%;
+  left: -5%;
   top: 50%;
+}
+
+.pls{
+  display: none;
+}
+
+.hvr:hover .pls{
+display: block;
+transition: display 1.5s;
 }
