--- a/src/Components/Home/Venues/venue.module.css
+++ b/src/Components/Home/Venues/venue.module.css
@@ -9,6 +9,14 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.bgImage{
+    background-image: url('../../../asset/brenda-alvarado-ruiz-m-i_e6c8gm8-unsplash.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 .section::-webkit-scrollbar {
     width: 5px;
     border-radius: 100rem;
