--- a/src/Components/Home/Blog/BlogDetails/FeaturedEvent/DateAndCategory/DateAndCategory.css
+++ b/src/Components/Home/Blog/BlogDetails/FeaturedEvent/DateAndCategory/DateAndCategory.css
@@ -1,15 +1,16 @@
 .DateAndTime {
-    width: 32.9%;
+  width: 52.9%;
+  padding: 25px 20px;
+  margin-right: 5px;
+  border-radius: 4px;
+  background-color: #f7f7f7;
+}
+@media screen and (max-width: 576px) {
+  .DateAndTime {
+    width: 100%;
     padding: 25px 20px;
     margin-right: 5px;
     border-radius: 4px;
     background-color: #f7f7f7;
+  }
 }
-@media screen and (max-width: 576px) {
-    .DateAndTime {
-        width: 100%;
-        padding: 25px 20px;
-        margin-right: 5px;
-        border-radius: 4px;
-        background-color: #f7f7f7;
-    }}
