--- a/src/Components/EventDetails/FeaturedEvent/EventSchedule/Tab/Tab.css
+++ b/src/Components/EventDetails/FeaturedEvent/EventSchedule/Tab/Tab.css
@@ -15,7 +15,7 @@
 
 .bloc-tabs {
    display: flex;
-   gap: 2rem;
+   gap: 1.5rem;
    text-align: center;
 }
 
@@ -61,10 +61,10 @@
 
 
 
-button {
+/* button {
    border: none;
 
-}
+} */
 
 .content-tabs {
    flex-grow: 1;
