--- a/src/Components/Home/Venues/venue.module.css
+++ b/src/Components/Home/Venues/venue.module.css
@@ -39,7 +39,7 @@
 .selected{
     background-color: rgb(34, 34, 34);
     position: relative;
-    z-index: 99;
+    /* z-index: 99; */
 }
 
 .selected::before{
@@ -49,7 +49,7 @@
     height: 50px;
     border-radius: 2px;
     background-color: rgba(34, 34, 34);
-    z-index: 10;
+    /* z-index: -10; */
     top: 32%;
     right: -10px;
     transform: rotate(45deg);
