--- a/src/Components/Home/Blog/BlogDetails/FeaturedEvent/DateAndCategory/DateAndCategory.css
+++ b/src/Components/Home/Blog/BlogDetails/FeaturedEvent/DateAndCategory/DateAndCategory.css
@@ -1,6 +1,7 @@
 .DateAndTime {
   width: 52.9%;
-  padding: 25px 20px;
+  height: 100px;
+  padding: 25px 10px;
   margin-right: 5px;
   border-radius: 4px;
   background-color: #f7f7f7;
