--- a/src/Components/Authentication/form.module.css
+++ b/src/Components/Authentication/form.module.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 * {
@@ -55,8 +54,10 @@
 }
 
 .button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
+	background-color: #ff442bad;
+	border-radius: 20px;
+	color: white;
+	border: 3px solid white;
 }
 
 .form {
@@ -149,9 +150,8 @@
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: -webkit-linear-gradient(to right, #FF4B2B, orange,orange,#FF4B2B);
+	background: linear-gradient(to right, #FF4B2B, orange,orange,#FF4B2B);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
