--- a/src/Components/Authentication/form.module.css
+++ b/src/Components/Authentication/form.module.css
@@ -78,7 +78,7 @@
 
 .input {
 	background-color: transparent;
-	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.586);
+	box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
 	padding: 12px 15px;
 	margin: 8px 0;
 	width: 100%;
@@ -207,7 +207,7 @@
 	margin: 20px 0;
 }
 
-.socialContainer .a {
+.social {
 	border: 1px solid #DDDDDD;
 	border-radius: 50%;
 	display: inline-flex;
