--- a/src/Components/Share/Navbar/Navbar.css
+++ b/src/Components/Share/Navbar/Navbar.css
@@ -14,10 +14,10 @@
    background-color: #cacaca;
 }
 .menu :where(li) > :where(*:not(ul)) {
-   padding-left: 1rem;
-   padding-right: 1rem;
-   padding-top: 8px;
-   padding-bottom: 8px;
+   padding-left: 0px;
+   padding-right: 0px;
+   padding-top: 0px;
+   padding-bottom: 0px;
 }
 .hover\:bg-slate-300:hover {
    --tw-bg-opacity: 1;
