staff section updated

--- a/src/Components/Share/Navbar/Navbar.css
+++ b/src/Components/Share/Navbar/Navbar.css
@@ -50,3 +50,9 @@
 .menu li a{
    padding: 10px;
 }
+
+.btnActive {
+   background: linear-gradient(to bottom right, #ffbe30, #ff3e00) !important;
+   color: white !important;
+}
+
