--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('http://fonts.cdnfonts.com/css/operator-mono');
 
 .openSans {
   font-family: "Open Sans", sans-serif;
@@ -11,6 +12,10 @@
 
 .roboto {
   font-family: "Roboto", sans-serif;
+}
+
+.operator{
+  font-family: 'Operator Mono', sans-serif;
 }
 
 body {
