--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -15,7 +15,7 @@ body {
 
 .swiper {
   width: 100%;
-  height: 85vh;
+  height: 100vh;
 }
 
 .swiper-slide {
@@ -47,6 +47,8 @@ body {
   width: 100vw;
   height: 100vh;
   object-fit: cover;
+  object-position: center;
+  filter: contrast(0.70);
 }
 
 .swiper-pagination-bullet {
