solve same problem

--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -35,7 +35,37 @@
    background-image: url('../../asset/userProfileSvg/wave.svg');
    background-repeat: no-repeat;
    background-size: cover;
-   padding: 1rem 0rem ;
    width: 100%;
-   height: 250px;
+   height: 280px;
+   background-position: center;
+}
+@media only screen and (max-width:580px){
+   #sidebar_User_profile{
+      background-image: url('../../asset/userProfileSvg/wave.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 100%;
+      height: 280px;
+      background-position: center;
+   }
+}
+@media only screen and (min-width:580px){
+   #sidebar_User_profile{
+      background-image: url('../../asset/userProfileSvg/wave.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 100%;
+      height: 400px;
+      background-position: center;
+   }
+}
+@media only screen and (min-width:1023px){
+   #sidebar_User_profile{
+      background-image: url('../../asset/userProfileSvg/wave.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 100%;
+      height: 285px;
+      background-position: center;
+   }
 }
