--- a/src/Components/Share/Loading/loading.module.css
+++ b/src/Components/Share/Loading/loading.module.css
@@ -1,15 +1,5 @@
-:root {
-	--fg: #17181c;
-	--shade1: #727274;
-	--shade2: #cccdd1;
-	--shade3: #f3f4f8;
-	--shade4: #ffffff;
-	--dur1: 1s;
-	--dur2: 6s;
-	font-size: calc(16px + (32 - 16)*(100vw - 320px)/(2560 - 320));
-}
 .preloader {
-	animation: largePopOut var(--dur1) linear;
+    box-shadow: none;
 	border-radius: 50%;
 	margin-bottom: 3em;
 	position: relative;
@@ -17,13 +7,13 @@
 	height: 12em;
 }
 .preloader__square {
-	animation: smallPopOut1 var(--dur1) linear, popInOut var(--dur2) var(--dur1) linear infinite;
+	animation: smallPopOut1 1s linear, popInOut 6s 1s linear infinite;
 	border-radius: 0.5em;
 	box-shadow:
-		0.15em 0.15em 0.15em var(--shade4) inset,
-		-0.15em -0.15em 0.15em var(--shade1) inset,
-		0.25em 0.25em 0.5em var(--shade1),
-		-0.25em -0.25em 0.5em var(--shade4);
+		0.15em 0.15em 0.15em #ffffff inset,
+		-0.15em -0.15em 0.15em #727274 inset,
+		0.25em 0.25em 0.5em #727274,
+		-0.25em -0.25em 0.5em #ffffff;
 	position: absolute;
 	top: 2.5em;
 	left: 2.5em;
@@ -37,27 +27,27 @@
 	top: 6.5em;
 }
 .preloader__square:nth-child(2) {
-	animation: smallPopOut2 var(--dur1) linear, move2 var(--dur2) var(--dur1) linear infinite;
+	animation: smallPopOut2 1s linear, move2 6s 1s linear infinite;
 }
 .preloader__square:nth-child(3) {
-	animation: smallPopOut3 var(--dur1) linear, move3 var(--dur2) var(--dur1) linear infinite;
+	animation: smallPopOut3 1s linear, move3 6s 1s linear infinite;
 }
 .preloader__square:nth-child(4) {
-	animation: smallPopOut4 var(--dur1) linear, move4 var(--dur2) var(--dur1) linear infinite;
+	animation: smallPopOut4 1s linear, move4 6s 1s linear infinite;
 }
 .status {
-	animation: fadeIn var(--dur1) linear forwards;
+	animation: fadeIn 1s linear forwards;
 	text-align: center;
 }
 .status__dot {
-	animation: appear1 var(--dur1) var(--dur1) steps(1,start) infinite;
+	animation: appear1 1s 1s steps(1,start) infinite;
 	display: inline-block;
 }
 .status__dot:nth-child(2) {
-	animation: appear2 var(--dur1) var(--dur1) steps(1,start) infinite;
+	animation: appear2 1s 1s steps(1,start) infinite;
 }
 .status__dot:nth-child(3) {
-	animation: appear3 var(--dur1) var(--dur1) steps(1,start) infinite;
+	animation: appear3 1s 1s steps(1,start) infinite;
 }
 
 
@@ -65,288 +55,288 @@
 @keyframes largePopOut {
 	from, 20% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1), 
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274, 
+			0 0 0 #ffffff;
 	}
 	40% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			2em 2em 2em var(--shade1), 
-			-2em -2em 4em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			2em 2em 2em #727274, 
+			-2em -2em 4em #ffffff;
 	}
 	60%, to {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			1em 1em 2em var(--shade1), 
-			-1em -1em 2em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			1em 1em 2em #727274, 
+			-1em -1em 2em #ffffff;
 	}
 }
 @keyframes smallPopOut1 {
 	from, 40% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1), 
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274, 
+			0 0 0 #ffffff;
 	}
 	60% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 	}
 	80%, to {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 	}
 }
 
 @keyframes smallPopOut2 {
 	from, 45% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1), 
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274, 
+			0 0 0 #ffffff;
 	}
 	65% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 	}
 	85%, to {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 	}
 }
 
 @keyframes smallPopOut3 {
 	from, 50% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1), 
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274, 
+			0 0 0 #ffffff;
 	}
 	70% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 	}
 	90%, to {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 	}
 }
 
 @keyframes smallPopOut4 {
 	from, 55% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1), 
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274, 
+			0 0 0 #ffffff;
 	}
 	75% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 	}
 	95%, to {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 	}
 }
 @keyframes popInOut {
 	from {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 		transform: translate(0,0);
 	}
 	4% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(0,0);
 	}
 	8% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(0,0);
 	}
 	12%, 16% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(4em,0);
 	}
 	20% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(4em,0);
 	}
 	24%, 25% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 		transform: translate(4em,0);
 	}
 	29% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(4em,0);
 	}
 	33% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(4em,0);
 	}
 	37%, 41% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(4em,4em);
 	}
 	45% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(4em,4em);
 	}
 	49%, 50% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 		transform: translate(4em,4em);
 	}
 	54% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(4em,4em);
 	}
 	58% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(4em,4em);
 	}
 	62%, 66% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(0,4em);
 	}
 	70% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(0,4em);
 	}
 	74%, 75% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 		transform: translate(0,4em);
 	}
 	79% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(0,4em);
 	}
 	83% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(0,4em);
 	}
 	87%, 91% {
 		box-shadow:
-			0 0 0 var(--shade4) inset,
-			0 0 0 var(--shade1) inset,
-			0 0 0 var(--shade1),
-			0 0 0 var(--shade4);
+			0 0 0 #ffffff inset,
+			0 0 0 #727274 inset,
+			0 0 0 #727274,
+			0 0 0 #ffffff;
 		transform: translate(0,0);
 	}
 	95% {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.5em 0.5em 0.5em var(--shade1),
-			-0.5em -0.5em 1em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.5em 0.5em 0.5em #727274,
+			-0.5em -0.5em 1em #ffffff;
 		transform: translate(0,0);
 	}
 	99%, to {
 		box-shadow:
-			0.15em 0.15em 0.15em var(--shade4) inset,
-			-0.15em -0.15em 0.15em var(--shade1) inset,
-			0.25em 0.25em 0.5em var(--shade1),
-			-0.25em -0.25em 0.5em var(--shade4);
+			0.15em 0.15em 0.15em #ffffff inset,
+			-0.15em -0.15em 0.15em #727274 inset,
+			0.25em 0.25em 0.5em #727274,
+			-0.25em -0.25em 0.5em #ffffff;
 		transform: translate(0,0);
 	}
 }
